# Soy-Lang

./: .gitignore  CMakeLists.txt  Makefile  README.md  Soy_Lang  lang
include/: function.hpp  lexer.hpp  math.hpp  module.hpp  parser.hpp  statement.hpp  utils.hpp  variable.hpp
src/: block.cpp  error.cpp  function.cpp  lexer.cpp  main.cpp  math.cpp  module.cpp  parser.cpp  read.cpp  statement.cpp  utils.cpp  variable.cpp
src/include/: block.hpp  error.hpp  function.hpp  lexer.hpp  math.hpp  module.hpp  read.hpp  utils.hpp  variable.hpp
